fix layout shift, add loading skeletons

--- a/src/app/(app)/globals.scss
+++ b/src/app/(app)/globals.scss
@@ -76,6 +76,6 @@
   h4,
   h5,
   h6 {
-    @apply scroll-mt-8;
+    @apply scroll-mt-6;
   }
 }
